plugins {
	id 'java'
//	id 'org.springframework.boot' version '3.5.3'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}



dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'


	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	//jdbc
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	//크롤링을 위해 셀레니움, 웹드라이버 매니저 의존성 추가
	//selenium
	implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
	//webdriver-manager
	implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'

	// 이미지 업로드를 위한 google cloud storage 의존성 추가
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.2.5.RELEASE'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-storage', version: '1.2.5.RELEASE'

	//웹소켓
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:sockjs-client:1.1.2'

	//mongoDB 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	//redis pub/sub
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.data:spring-data-redis'

	//이메일 인증 번호 전송을 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//Redis 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//jwt 라이브러리 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Elasticsearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// JSON (DTO 직렬화용)
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}



tasks.named('test') {
	useJUnitPlatform()
}
